<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme"
        android:title="@string/tema_mudar"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/tema_claro"
                android:title="@string/tema_claro" />
            <item
                android:id="@+id/tema_escuro"
                android:title="@string/tema_escuro" />
            <item
                android:id="@+id/tema_preferido"
                android:title="@string/tema_preferido" />
        </menu>
    </item>
</menu>