<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copiar_texto"
        android:title="@string/menu_copiar"
        android:icon="@drawable/ic_menu_copy"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_compartilhar_texto"
        android:title="@string/menu_compartilhar"
        android:icon="@drawable/ic_menu_share"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ouvir_texto"
        android:title="@string/menu_ouvir"
        android:icon="@drawable/ic_ouvir_leitura"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_aumentar_fonte"
        android:title="@string/menu_aumentar_fonte"
        android:icon="@drawable/ic_aumentar_fonte"
    app:showAsAction="never"/>

    <item
        android:id="@+id/action_diminuir_fonte"
        android:title="@string/menu_diminuir_fonte"
        android:icon="@drawable/ic_diminuir_fonte"
    app:showAsAction="never"/>

    <item
        android:id="@+id/action_trocar_tema"
        android:title="@string/menu_trocar_tema"
        android:icon="@drawable/ic_menu_trocar_tema"
        app:showAsAction="never"/>
</menu>
